HashTable clean up